--- a/public/src/less/partials/_commons.less
+++ b/public/src/less/partials/_commons.less
@@ -41,3 +41,28 @@
 .top17 { margin-top:17px; }
 .top20 { margin-top:20px; }
 .top30 { margin-top:30px; }
+
+//fixed margin
+.margin-top-bottom5
+{
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.margin-top-bottom10
+{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.margin-left-right5
+{
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.margin-left-right10
+{
+  margin-left: 10px;
+  margin-right: 10px;
+}
