=adding nested set model location

--- a/public/src/less/main.less
+++ b/public/src/less/main.less
@@ -65,6 +65,7 @@
 @import "./partials/_commons.less";
 @import './partials/_forms.less';
 @import './partials/_table.less';
+@import './partials/_tree.less';
 
 
 //vendor less
