--- a/public/src/app/dashboard/dashboard.tpl.html
+++ b/public/src/app/dashboard/dashboard.tpl.html
@@ -1,7 +1,55 @@
 <div class="content bootstrap dashboardPage">
     <div class="panel margin-left-right10">
         <!--Comment Thread Block-->
-        <div comment-thread-block discussion-id=12 discussion-name='"User"'></div>
+        <!--<div comment-thread-block discussion-id=12 discussion-name='"User"'></div>-->
+
+        <!--TreeView-->
+        <div id="tree" class="jstree jstree-1 jstree-default">
+            <ul class="jstree-container-ul jstree-no-dots jstree-wholerow-ul">
+                <li role="treeitem" class="jstree-node  jstree-open jstree-last">
+                    <i class="jstree-icon jstree-ocl"></i>
+                    <a class="jstree-anchor" href="#">
+                        <i class="jstree-icon jstree-themeicon"></i>Inbox
+                    </a>
+
+                    <ul role="group" class="jstree-children" style="">
+                        <li role="treeitem"class="jstree-node  jstree-leaf jstree-last">
+                            <i class="jstree-icon jstree-ocl"></i>
+                            <a class="jstree-anchor" href="#">
+                                <i class="jstree-icon jstree-themeicon"></i>New node
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+
+            <ul class="jstree-container-ul jstree-no-dots jstree-wholerow-ul">
+                <li role="treeitem" class="jstree-node  jstree-open jstree-last">
+                    <i class="jstree-icon jstree-ocl"></i>
+                    <a class="jstree-anchor" href="#">
+                        <i class="jstree-icon jstree-themeicon"></i>Inbox
+                    </a>
+
+                    <ul role="group" class="jstree-children" style="">
+                        <li role="treeitem"class="jstree-node jstree-last">
+                            <i class="jstree-icon jstree-ocl"></i>
+                            <a class="jstree-anchor" href="#">
+                                <i class="jstree-icon jstree-themeicon"></i>New node
+                            </a>
+
+                            <ul role="group" class="jstree-children" style="">
+                                <li role="treeitem"class="jstree-node  jstree-leaf jstree-last">
+                                    <i class="jstree-icon jstree-ocl"></i>
+                                    <a class="jstree-anchor" href="#">
+                                        <i class="jstree-icon jstree-themeicon"></i>Child Node
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
 
         <!--<div class="ui grid">-->
             <!--<div class="ten wide column">-->
