=add treeview, less color

--- a/public/src/less/main.less
+++ b/public/src/less/main.less
@@ -25,7 +25,7 @@
  * definitions in our imported stylesheets.
  */
 
-@import 'variables.less';
+@import './modules/_variables.less';
 @import './partials/_typography.less';
 @import './partials/_navbar.less';
 
@@ -59,6 +59,7 @@
 @import '../app/activateAccount/activateAccount.less';
 @import '../app/resetPassword/resetPassword.less';
 @import '../app/userAccount/userAccount.less';
+@import '../app/location/location.less';
 
 //Common less
 @import './partials/_content.less';
