--- a/public/src/app/user/search.tpl.html
+++ b/public/src/app/user/search.tpl.html
@@ -1,3 +1,12 @@
+<div class="page-head">
+    <h2 class="page-title">Search: User</h2>
+    <ul class="breadcrumb page-breadcrumb">
+        <li class="breadcrumb-container">
+        </li>
+        <li class="breadcrumb-current">
+        </li>
+    </ul>
+</div>
 <div class="content bootstrap userSearchPage">
     <div class="panel">
         <div class="panel-heading">
