--- a/public/src/less/main.less
+++ b/public/src/less/main.less
@@ -28,6 +28,7 @@
 @import './modules/_variables.less';
 @import './partials/_typography.less';
 @import './partials/_navbar.less';
+@import './vendor/bi-app/bi-app-ltr.less';
 
 .main-page-notification
 {
@@ -67,6 +68,8 @@
 @import './partials/_forms.less';
 @import './partials/_table.less';
 @import './partials/_tree.less';
+@import './partials/_toolbar.less';
+@import './partials/_components.less';
 
 
 //vendor less
