--- a/public/src/less/partials/_content.less
+++ b/public/src/less/partials/_content.less
@@ -1,9 +1,10 @@
 .content
 {
-  padding: 0px 10px 0;
+//  padding: 0px 10px 0;
+  padding: 80px 10px 0;
   margin-left: 5px;
   margin-right: 5px;
-  margin-top: 20px;
+//  margin-top: 20px;
 
   .panel
   {
