--- a/public/src/less/partials/_table.less
+++ b/public/src/less/partials/_table.less
@@ -49,6 +49,11 @@
     }
   }
 
+  input, select
+  {
+    margin: 0;
+  }
+
   tbody
   {
     &  > tr > td
@@ -56,10 +61,10 @@
       border-top: none;
       color: lighten(#000000,40%);
       background-color: white;
-//      padding: 3px 7px;
+      padding: 3px 7px;
       vertical-align: middle;
       word-wrap: nowrap;
-//      font-size: 12px;
+      font-size: 14px;
       border-bottom: solid 1px #EAEDEF;
     }
     
@@ -101,6 +106,92 @@
   {
     cursor: pointer;
   }
+
+  td.dragHandle
+  {
+    .td.dragHandle
+    {
+      width: 80px;
+      cursor: move;
+      text-align: center;
+      position: relative;
+      font-size: @icon-size-base;
+      .padding(4px, 4px, 4px, 20px);
+      .border-radius(5px);
+
+      &:hover
+      {
+        color: white;
+        background-color: @brand-primary !important;
+      }
+
+      &:before
+      {
+        &:extend(.icon all);
+        &:extend(.icon-arrows all);
+        display: block;
+        height: 16px;
+        width: 16px;
+        position: absolute;
+        top: 8px;
+        .left(6px);
+      }
+
+      .btn-group .positions
+      {
+        display: inline-block;
+        border: solid 1px #ccc;
+        background-color: #eee;
+        padding: 0 5px;
+        color: #aaa;
+        width: 43px;
+//        .text-shadow(rgb(255,255,255) 1px 1px);
+        .border-radius(3px);
+        .box-shadow(rgba(0,0,0,0.2) 0 1px 3px inset);
+      }
+    }
+  }
+
+  .tr.actions
+  {
+    .text-align(right);
+  }
+
+  td.actions
+  {
+    .text-align(right);
+    .padding-right(5px);
+  }
+
+  th.actions .btn
+  {
+    margin-bottom: 4px !important;
+  }
+
+  tr.myDragClass
+  {
+    padding: 10px;
+    background-color: #EEEEEE;
+    td
+    {
+      color: white !important;
+      background-color: @brand-primary !important;
+//      .transform(translate(5px,10px));
+    }
+  }
+
+  &.tableDnD td
+  {
+    .transition-property(all);
+    .transition-duration(0.2s);
+//    .transition-timing-function(ease-out);
+  }
+}
+
+tr.highlighted td
+{
+  background-color: @brand-primary!important;
+  color: white !important;
 }
 
 .bulk-actions
@@ -110,5 +201,115 @@
   ul, i
   {
     font-size: 14px;
+  }
+}
+
+.list-action-enable
+{
+  font-size: 1.3em;
+  display: inline-block;
+  width: 30px;
+  text-align: center;
+  color: rgba(255,255,255,0.8);
+  .border-radius(3px);
+
+  &.action-enabled
+  {
+    border: solid @brand-success 1px;
+    background-color: lighten(@brand-success,10%);
+  }
+
+  &.action-disabled
+  {
+    border: solid @brand-danger 1px;
+    background-color: lighten(@brand-danger,10%);
+  }
+
+  &:hover
+  {
+    color: white;
+  }
+}
+
+.list-empty
+{
+  background-color: #FCFDFE !important;
+  .list-empty-msg
+  {
+    text-align: center;
+    display: block;
+    width: 50%;
+    margin: 20px auto;
+    color: #999;
+    font-family: @headings-font-family;
+    font-size: 1.4em;
+  }
+  .list-empty-icon
+  {
+    color: #dedede;
+    display: block;
+    clear: both;
+    font-size: @icon-size-base*6;
+//    .text-shadow(white 1px 1px 0);
+  }
+}
+
+@media (max-width: @screen-sm-max)
+{
+  .table-responsive
+  {
+    width: 100%;
+    margin-bottom: (@line-height-computed * 0.75);
+    overflow-y: hidden;
+    overflow-x: auto;
+    border: 1px solid @table-border-color;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    -webkit-overflow-scrolling: touch;
+
+    & > .table
+    {
+      margin-bottom: 0;
+      & > thead, & > tbody, & > tfoot
+      {
+        & > tr
+        {
+          & > th, & > td
+          {
+            white-space: nowrap;
+          }
+        }
+      }
+    }
+
+    & > .table-bordered
+    {
+      border: 0;
+      & > thead, & > tbody, & > tfoot
+      {
+        & > tr
+        {
+          & > th:first-child, & > td:first-child
+          {
+            .border-left(0);
+          }
+
+          & > th:last-child, & > td:last-child
+          {
+            .border-right(0);
+          }
+        }
+      }
+
+      & > tbody, & > tfoot
+      {
+        & > tr:last-child
+        {
+          & > th, & > td
+          {
+            border-bottom: 0;
+          }
+        }
+      }
+    }
   }
 }
