--- a/public/src/less/partials/_typography.less
+++ b/public/src/less/partials/_typography.less
@@ -81,9 +81,14 @@
   text-transform: none;
 }
 
+//Open Sans
+@import url("//fonts.googleapis.com/css?family=Open+Sans:300,400,700");
+@import url("//fonts.googleapis.com/css?family=Ubuntu+Condensed");
+
 body
 {
   font-family: "ProximaNovaRegular", "Open Sans", "Helvetica Neue",Helvetica,Arial,sans-serif;
+//  font-family: @font-family-sans-serif;
   background: #333D42 url("../assets/images/noise.png");
   font-size: 14px;
   line-height: 1.428571429;
