=update style, stable, breadcrumb

--- a/public/src/app/user/search.tpl.html
+++ b/public/src/app/user/search.tpl.html
@@ -1,12 +1,17 @@
+<!--Header BreadCumb-->
 <div class="page-head">
     <h2 class="page-title">Search: User</h2>
     <ul class="breadcrumb page-breadcrumb">
-        <li class="breadcrumb-container">
-        </li>
         <li class="breadcrumb-current">
+            <a href="">
+                <i class="fa fa-users"></i>
+                Users
+            </a>
         </li>
     </ul>
 </div>
+
+<!--Main Content Bootstrap-->
 <div class="content bootstrap userSearchPage">
     <div class="panel">
         <div class="panel-heading">
