--- a/public/src/less/main.less
+++ b/public/src/less/main.less
@@ -69,6 +69,7 @@
 @import './partials/_table.less';
 @import './partials/_tree.less';
 @import './partials/_toolbar.less';
+@import './partials/_icons.less';
 @import './partials/_components.less';
 
 
