--- a/public/src/less/partials/_toolbar.less
+++ b/public/src/less/partials/_toolbar.less
@@ -26,7 +26,7 @@
     margin: 0;
     font: 300 20px/1em @font-family-sans-serif;
     color: white;
-    .padding(28px, 0, 0, (@widthSidebarNav+70px));
+    .padding(28px, 0, 0, 80px);
 
     @media (max-width: @screen-tablet)
     {
@@ -133,7 +133,7 @@
     border: none !important;
     white-space: nowrap;
     .border-radius(0);
-    .left(@widthSidebarNav+70px);
+    .left(80px);
 
     @media (max-width: @screen-tablet)
     {
