=major code refactoring

--- a/public/src/app/dashboard/dashboard.tpl.html
+++ b/public/src/app/dashboard/dashboard.tpl.html
@@ -1,7 +1,7 @@
 <div class="content bootstrap dashboardPage">
     <div class="panel margin-left-right10">
         <!--Comment Thread Block-->
-        <!--<div comment-thread-block discussion-id=12 discussion-name='"User"'></div>-->
+        <div comment-thread-block discussion-id=12 discussion-name='"User"'></div>
 
         <!--<div class="ui grid">-->
             <!--<div class="ten wide column">-->
