add jasmine test framework, move route logic to modules, add chat logic support

--- a/public/src/app/dashboard/dashboard.tpl.html
+++ b/public/src/app/dashboard/dashboard.tpl.html
@@ -1,7 +1,89 @@
 <div class="content bootstrap dashboardPage">
     <div class="panel margin-left-right10">
+        <!--Test Chat Dialog-->
+        <div class="chat-window" style="right: 10px;">
+            <div class="chat-window-title">
+                <div class="text">Chat</div>
+            </div>
+            <div class="chat-window-content">
+                <div class="chat-window-inner-content">
+                    <div class="user-list-item" data-val-id="9709">
+                        <img class="profile-picture"
+                             src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm">
+                        <div class="profile-status online"></div>
+                        <div class="content">Stephanie</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="chat-window" style="right: 252px;">
+            <div class="chat-window-title online">
+                <div class="close"></div>
+                <div class="text">Stephanie</div>
+            </div>
+            <div class="chat-window-content">
+                <div class="chat-window-inner-content">
+                    <div class="chat-message" data-val-user-from="52366">
+                        <div class="chat-gravatar-wrapper"><img src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm"></div>
+                        <div class="chat-text-wrapper">
+                            <p class="">hihi</p>
+                            <p class="">this is testing</p>
+                        </div>
+                    </div>
+                    <div class="chat-message" data-val-user-from="9709">
+                        <div class="chat-gravatar-wrapper"><img src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm"></div>
+                        <div class="chat-text-wrapper">
+                            <p>hi</p>
+                        </div>
+                    </div>
+                    <div class="chat-message" data-val-user-from="52366">
+                        <div class="chat-gravatar-wrapper"><img src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm"></div>
+                        <div class="chat-text-wrapper">
+                            <p class="">ok i see you</p>
+                        </div>
+                    </div>
+                    <div class="chat-message" data-val-user-from="9709">
+                        <div class="chat-gravatar-wrapper"><img src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm"></div>
+                        <div class="chat-text-wrapper">
+                            <p>really</p>
+                            <p>yes, of cours</p>
+                        </div>
+                    </div>
+                    <div class="chat-message" data-val-user-from="52366">
+                        <div class="chat-gravatar-wrapper"><img src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm"></div>
+                        <div class="chat-text-wrapper">
+                            <p class="">blah blah</p>
+                            <p class="">skdfdhs</p>
+                            <p class="">TestTest</p>
+                        </div>
+                    </div>
+                    <div class="chat-message" data-val-user-from="9709">
+                        <div class="chat-gravatar-wrapper"><img src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm"></div>
+                        <div class="chat-text-wrapper">
+                            <p>dsf</p>
+                        </div>
+                    </div>
+                    <div class="chat-message" data-val-user-from="52366">
+                        <div class="chat-gravatar-wrapper"><img src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm"></div>
+                        <div class="chat-text-wrapper">
+                            <p class="">sdfs</p>
+                        </div>
+                    </div>
+                    <div class="chat-message" data-val-user-from="9709">
+                        <div class="chat-gravatar-wrapper"><img src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm"></div>
+                        <div class="chat-text-wrapper">
+                            <p>sdf</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="chat-window-text-box-wrapper"><textarea rows="1" class="chat-window-text-box" style="overflow: hidden; word-wrap: break-word; resize: none; height: 26px;"></textarea></div>
+            </div>
+        </div>
+
+
         <!--Comment Thread Block-->
-        <div comment-thread-block discussion-id=12 discussion-name='"User"'></div>
+        <!--<div comment-thread-block object-id=12 collection-name='"User"'></div>-->
 
         <!--<div class="ui grid">-->
             <!--<div class="ten wide column">-->
