--- a/public/src/less/main.less
+++ b/public/src/less/main.less
@@ -26,6 +26,7 @@
  */
 
 @import './modules/_variables.less';
+@import './modules/_chat.less';
 @import './partials/_typography.less';
 @import './partials/_navbar.less';
 @import './vendor/bi-app/bi-app-ltr.less';
