=in middle of major socket.io chat

--- a/public/src/app/dashboard/dashboard.tpl.html
+++ b/public/src/app/dashboard/dashboard.tpl.html
@@ -1,176 +1,5 @@
 <div class="content bootstrap dashboardPage">
     <div class="panel margin-left-right10">
-        <!--Test Chat Dialog-->
-        <div class="chat-window" style="right: 10px;">
-            <div class="chat-window-title">
-                <div class="text">Chat</div>
-            </div>
-            <div class="chat-window-content">
-                <div class="chat-window-inner-content">
-                    <div class="user-list-item" data-val-id="9709">
-                        <img class="profile-picture"
-                             src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm">
-                        <div class="profile-status online"></div>
-                        <div class="content">Stephanie</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="chat-window" style="right: 252px;">
-            <div class="chat-window-title online">
-                <div class="close"></div>
-                <div class="text">Stephanie</div>
-            </div>
-            <div class="chat-window-content">
-                <div class="chat-window-inner-content">
-                    <div class="chat-message" data-val-user-from="52366">
-                        <div class="chat-gravatar-wrapper"><img src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm"></div>
-                        <div class="chat-text-wrapper">
-                            <p class="">hihi</p>
-                            <p class="">this is testing</p>
-                        </div>
-                    </div>
-                    <div class="chat-message" data-val-user-from="9709">
-                        <div class="chat-gravatar-wrapper"><img src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm"></div>
-                        <div class="chat-text-wrapper">
-                            <p>hi</p>
-                        </div>
-                    </div>
-                    <div class="chat-message" data-val-user-from="52366">
-                        <div class="chat-gravatar-wrapper"><img src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm"></div>
-                        <div class="chat-text-wrapper">
-                            <p class="">ok i see you</p>
-                        </div>
-                    </div>
-                    <div class="chat-message" data-val-user-from="9709">
-                        <div class="chat-gravatar-wrapper"><img src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm"></div>
-                        <div class="chat-text-wrapper">
-                            <p>really</p>
-                            <p>yes, of cours</p>
-                        </div>
-                    </div>
-                    <div class="chat-message" data-val-user-from="52366">
-                        <div class="chat-gravatar-wrapper"><img src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm"></div>
-                        <div class="chat-text-wrapper">
-                            <p class="">blah blah</p>
-                            <p class="">skdfdhs</p>
-                            <p class="">TestTest</p>
-                        </div>
-                    </div>
-                    <div class="chat-message" data-val-user-from="9709">
-                        <div class="chat-gravatar-wrapper"><img src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm"></div>
-                        <div class="chat-text-wrapper">
-                            <p>dsf</p>
-                        </div>
-                    </div>
-                    <div class="chat-message" data-val-user-from="52366">
-                        <div class="chat-gravatar-wrapper"><img src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm"></div>
-                        <div class="chat-text-wrapper">
-                            <p class="">sdfs</p>
-                        </div>
-                    </div>
-                    <div class="chat-message" data-val-user-from="9709">
-                        <div class="chat-gravatar-wrapper"><img src="https://www.gravatar.com/avatar/2a4d830a249b9d7a99b33e723df34aea?s=32&amp;r=PG&amp;d=mm"></div>
-                        <div class="chat-text-wrapper">
-                            <p>sdf</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="chat-window-text-box-wrapper"><textarea rows="1" class="chat-window-text-box" style="overflow: hidden; word-wrap: break-word; resize: none; height: 26px;"></textarea></div>
-            </div>
-        </div>
-
-
-        <!--Comment Thread Block-->
-        <!--<div comment-thread-block object-id=12 collection-name='"User"'></div>-->
-
-        <!--<div class="ui grid">-->
-            <!--<div class="ten wide column">-->
-                <!--<div class="ui small piled feed segment">-->
-                    <!--<h4 class="ui header">My Activity</h4>-->
-                    <!--<div class="event">-->
-                        <!--<div class="label">-->
-                            <!--<img src="http://lorempixel.com/100/100/people/9">-->
-                        <!--</div>-->
-                        <!--<div class="content">-->
-                            <!--<div class="date">-->
-                                <!--Just moments ago-->
-                            <!--</div>-->
-                            <!--<div class="summary">-->
-                                <!--<a>Sally Poodle</a> added you as a friend-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="event">-->
-                        <!--<div class="label">-->
-                            <!--<i class="circular pencil icon"></i>-->
-                        <!--</div>-->
-                        <!--<div class="content">-->
-                            <!--<div class="date">-->
-                                <!--3 days ago-->
-                            <!--</div>-->
-                            <!--<div class="summary">-->
-                                <!--You submitted a new post to the page-->
-                            <!--</div>-->
-                            <!--<div class="extra text">-->
-                                <!--I am a dog and I do not know how to make a post-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="event">-->
-                        <!--<div class="label">-->
-                            <!--<i class="circular photo icon"></i>-->
-                        <!--</div>-->
-                        <!--<div class="content">-->
-                            <!--<div class="date">-->
-                                <!--3 days ago-->
-                            <!--</div>-->
-                            <!--<div class="summary">-->
-                                <!--<a>Sally Poodle</a> added <a>2 new photos</a> of you-->
-                            <!--</div>-->
-                            <!--<div class="extra images">-->
-                                <!--<img src="http://lorempixel.com/100/100/people/9">-->
-                                <!--<img src="http://lorempixel.com/100/100/people/9">-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="six wide column">-->
-                <!--<div class="ui small   feed segment">-->
-                    <!--<h4 class="ui header">Followers Activity</h4>-->
-                    <!--<div class="event">-->
-                        <!--<div class="content">-->
-                            <!--<div class="summary">-->
-                                <!--<a>Sally Poodle</a> added <a>hotpup202</a> as a friend-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="event">-->
-                        <!--<div class="content">-->
-                            <!--<div class="summary">-->
-                                <!--<a>Dally Doodle</a> added <a>hotpup202</a> as a friend-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="event">-->
-                        <!--<div class="content">-->
-                            <!--<div class="summary">-->
-                                <!--<a>Sally Poodle</a> added <a>sixpack dog</a> as a friend-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="event">-->
-                        <!--<div class="content">-->
-                            <!--<div class="summary">-->
-                                <!--<a>Dally Doodle</a> added <a>hotpup202</a> as a friend-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-
+        <div chat-widget socket-server='socketServer' user='user'></div>
     </div>
 </div>
