=support multiple modules grunt

--- a/public/src/less/login.less
+++ b/public/src/less/login.less
@@ -4,3 +4,5 @@
 @import './../login/forgotPassword/forgotPassword.less';
 @import './../login/activateAccount/activateAccount.less';
 @import './../login/resetPassword/resetPassword.less';
+
+@import './partials/_typography.less';
