--- a/public/src/login/login/login.less
+++ b/public/src/login/login/login.less
@@ -223,6 +223,7 @@ a
             position: absolute;
             right: 15px;
             text-transform: uppercase;
+            padding: 11px 29px;
           }
         }
       }
