--- a/public/src/less/modules/_variables.less
+++ b/public/src/less/modules/_variables.less
@@ -19,7 +19,7 @@
 
 // FontAwesome icons;
 @icon-font-family: 'FontAwesome';
-@fa-css-prefix: icon;
+//@fa-css-prefix: icon;
 @icon-size-base: 16px;
 ;
 // Bootstrap variables;
