--- a/public/src/login/login/login.less
+++ b/public/src/login/login/login.less
@@ -54,8 +54,11 @@ a
 .login-block-wrapper
 {
   margin-top: 220px;
-  color: #848484;
+  color: @login-text-color;
   font-weight: 400;
+  background: white;
+  padding: 10px 0px 57px 0px;
+  width: 70%;
 
   .title-wrapper
   {
@@ -216,14 +219,6 @@ a
             {
               font-size: 11px;
             }
-          }
-
-          .btn.submit
-          {
-            position: absolute;
-            right: 15px;
-            text-transform: uppercase;
-            padding: 11px 29px;
           }
         }
       }
