--- a/public/src/less/cms.less
+++ b/public/src/less/cms.less
@@ -1,17 +1,6 @@
-/**
- * This is the main application stylesheet. It should include or import all
- * stylesheets used throughout the application as this is the only stylesheet in
- * the Grunt configuration that is automatically processed.
- */
-
-
-/**
- * First, we include the Twitter Bootstrap LESS files. Only the ones used in the
- * project should be imported as the rest are just wasting space.
- */
-
 //font-awesome
 @import "./../../vendor/font-awesome/less/variables.less";
+//override variables overhere
 @fa-font-path:  "../assets/fonts";
 
 @import "./../../vendor/font-awesome/less/mixins.less";
@@ -26,8 +15,60 @@
 @import "./../../vendor/font-awesome/less/stacked.less";
 @import "./../../vendor/font-awesome/less/icons.less";
 
-//Every Things
-@import './../../vendor/bootstrap/less/bootstrap.less';
+//Bootstrap
+//@import './../../vendor/bootstrap/less/bootstrap.less';
+@import "./../../vendor/bootstrap/less/variables.less";
+
+//custom variables
+@import './modules/_variables.less';
+
+@import "./../../vendor/bootstrap/less/mixins.less";
+
+// Reset
+@import "./../../vendor/bootstrap/less/normalize.less";
+@import "./../../vendor/bootstrap/less/print.less";
+
+// Core
+@import "./../../vendor/bootstrap/less/scaffolding.less";
+@import "./../../vendor/bootstrap/less/type.less";
+@import "./../../vendor/bootstrap/less/code.less";
+@import "./../../vendor/bootstrap/less/grid.less";
+@import "./../../vendor/bootstrap/less/tables.less";
+@import "./../../vendor/bootstrap/less/forms.less";
+@import "./../../vendor/bootstrap/less/buttons.less";
+
+// Compon
+@import "./../../vendor/bootstrap/less/component-animations.less";
+@import "./../../vendor/bootstrap/less/glyphicons.less";
+@import "./../../vendor/bootstrap/less/dropdowns.less";
+@import "./../../vendor/bootstrap/less/button-groups.less";
+@import "./../../vendor/bootstrap/less/input-groups.less";
+@import "./../../vendor/bootstrap/less/navs.less";
+@import "./../../vendor/bootstrap/less/navbar.less";
+@import "./../../vendor/bootstrap/less/breadcrumbs.less";
+@import "./../../vendor/bootstrap/less/pagination.less";
+@import "./../../vendor/bootstrap/less/pager.less";
+@import "./../../vendor/bootstrap/less/labels.less";
+@import "./../../vendor/bootstrap/less/badges.less";
+@import "./../../vendor/bootstrap/less/jumbotron.less";
+@import "./../../vendor/bootstrap/less/thumbnails.less";
+@import "./../../vendor/bootstrap/less/alerts.less";
+@import "./../../vendor/bootstrap/less/progress-bars.less";
+@import "./../../vendor/bootstrap/less/media.less";
+@import "./../../vendor/bootstrap/less/list-group.less";
+@import "./../../vendor/bootstrap/less/panels.less";
+@import "./../../vendor/bootstrap/less/wells.less";
+@import "./../../vendor/bootstrap/less/close.less";
+
+// Component
+@import "./../../vendor/bootstrap/less/modals.less";
+@import "./../../vendor/bootstrap/less/tooltip.less";
+@import "./../../vendor/bootstrap/less/popovers.less";
+@import "./../../vendor/bootstrap/less/carousel.less";
+
+// Utilitity
+@import "./../../vendor/bootstrap/less/utilities.less";
+@import "./../../vendor/bootstrap/less/responsive-utilities.less";
 
 //sematic ui stylesheets
 @import './../../vendor/semantic/build/less/views/comment.less';
@@ -40,7 +81,6 @@
  * definitions in our imported stylesheets.
  */
 
-@import './modules/_variables.less';
 @import './modules/_chat.less';
 @import './partials/_typography.less';
 @import './partials/_navbar.less';
@@ -60,6 +100,17 @@
       position: relative;
     }
   }
+}
+
+
+body
+{
+  font-family: "Open Sans", "ProximaNovaRegular", "Open Sans", "Helvetica Neue",Helvetica,Arial,sans-serif;
+  background: #333D42 url("../assets/images/noise.png");
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.428571429;
+  color: #333;
 }
 
 /**
