--- a/public/src/less/login.less
+++ b/public/src/less/login.less
@@ -21,3 +21,24 @@
 @import './../login/activateAccount/activateAccount.less';
 @import './../login/resetPassword/resetPassword.less';
 @import './partials/_typography.less';
+
+@login-them-color: #0191c8;
+@login-text-color: black;
+
+body
+{
+  font-family: "Open Sans", "ProximaNovaRegular", "Open Sans", "Helvetica Neue",Helvetica,Arial,sans-serif;
+  background: #0191c8 url("../assets/images/noise.png");
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.428571429;
+  color: #333;
+}
+
+.btn.submit
+{
+  position: absolute;
+  right: 15px;
+  text-transform: uppercase;
+  padding: 11px 29px;
+}
