--- a/public/src/less/partials/_table.less
+++ b/public/src/less/partials/_table.less
@@ -19,11 +19,7 @@
         display: block;
         word-wrap: nowrap;
         white-space: nowrap;
-
-        &.active
-        {
-          font-weight: bold;
-        }
+        text-transform: uppercase;
 
         a
         {
@@ -59,12 +55,11 @@
     &  > tr > td
     {
       border-top: none;
-      color: lighten(#000000,40%);
       background-color: white;
-      padding: 3px 7px;
+      padding: 10px 7px;
       vertical-align: middle;
       word-wrap: nowrap;
-      font-size: 14px;
+      font-size: 13px;
       border-bottom: solid 1px #EAEDEF;
     }
     
@@ -83,6 +78,17 @@
       i
       {
         padding: 4px 5px;
+        cursor: pointer;
+
+        &:hover
+        {
+          opacity: 0.8;
+        }
+
+        &:before
+        {
+          cursor: pointer;
+        }
 
         &.fa-times
         {
