=add angular data, refactor code, etc..

--- a/public/src/less/partials/_forms.less
+++ b/public/src/less/partials/_forms.less
@@ -58,6 +58,13 @@ input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, in
   .box-shadow(none);
 }
 
+//invalid input style
+input.ng-invalid
+{
+  border: 1px solid @brand-danger !important;
+}
+
+
 //choosen style reset
 .chosen-container-single
 {
