--- a/public/src/less/partials/_navbar.less
+++ b/public/src/less/partials/_navbar.less
@@ -97,6 +97,9 @@
             padding-top: 10px;
             padding-bottom: 14px;
 
+            //TODO: this is quite hackish way
+            line-height: 31px;
+
             .avatar_wrapper
             {
               .img-thumbnail
