--- a/public/src/less/modules/_variables.less
+++ b/public/src/less/modules/_variables.less
@@ -14,6 +14,9 @@
 @navbar-default-link-hover-color: @beaver-cms-theme;
 @navbar-default-link-hover-bg: white;
 
+//font-path
+@icon-font-path: '../assets/fonts/';
+
 @main-color: #383F50 ;
 @primary-color: @blueSkype ;
 @secondary-color: @greenMainApp ;
